syntax = "proto3";

package golem.auth;

import "golem/common/account_id.proto";
import "golem/account/plan_id.proto";
import "golem/auth/account_role.proto";

message AuthCtx {
  golem.common.AccountId account_id = 1;
  golem.account.PlanId plan_id = 2;
  repeated AccountRole account_roles = 3;
}
